# triton-rustadminui

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  DEVELOPMENT_STATUS.md  Dockerfile  GETTING_STARTED.md  LDAPS_AUTHENTICATION.md  README.md  config.json.example  docker-compose.yml
frontend/: README.md  deploy.sh  verify-static.sh
frontend/triton-ui/: package-lock.json  package.json  package.json.compat  tailwind.config.js
frontend/triton-ui/public/: index.html
frontend/triton-ui/src/: App.tsx  index.css
mock-server/: db.json  routes.json
src/: config.rs  error.rs  main.rs
src/api/: auth.rs  dashboard.rs  images.rs  jobs.rs  mod.rs  mod.rs.bak  networks.rs  packages.rs  ping.rs  platforms.rs  servers.rs  users.rs  vms.rs
src/auth/: middleware.rs  mod.rs
src/models/: mod.rs
src/models/entities/: mod.rs
src/services/: amon.rs  cnapi.rs  imgapi.rs  jobs.rs  mod.rs  napi.rs  papi.rs  ufds.rs  vmapi.rs
static/: asset-manifest.json  build-info.json  index.html
static/static/css/: main.300a7edd.css  main.300a7edd.css.map  main.5350eb73.css  main.5350eb73.css.map  main.716196d9.css  main.716196d9.css.map  main.75dda389.css  main.75dda389.css.map  main.98ef72b7.css  main.98ef72b7.css.map  main.9aecfa5b.css  main.9aecfa5b.css.map  main.cd214732.css  main.cd214732.css.map  main.cd5f74ab.css  main.cd5f74ab.css.map  main.d96f216e.css  main.d96f216e.css.map  main.deb29442.css  main.deb29442.css.map  main.e57cf1c0.css  main.e57cf1c0.css.map  main.eb151261.css  main.eb151261.css.map
static/static/js/: 453.239474a5.chunk.js  453.239474a5.chunk.js.map  453.9b2a2aff.chunk.js  (+67 more)
(+17 files in other folders)
